# calibrig

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  TODO  configure.ac
src/: AnaglyphScreen.cpp  AnaglyphScreen.h  AnalysisResult.cpp  AnalysisResult.h  AnalysisResultCPU.h  AnalyzerFunctor.h  CommandStack.h  ComputationData.h  ComputationDataCPU.cpp  ComputationDataCPU.h  ComputationDataGPU.cpp  ComputationDataGPU.h  CudaImageProcessing.cu  CudaImageProcessing.h  CudaUtils.cpp  CudaUtils.h  Deformation.h  DiffScreen.cpp  DiffScreen.h  FMatrixAnalyzerCPU.cpp  FMatrixAnalyzerCPU.h  Grabber.cpp  Grabber.h  GrabberSDI.cpp  GrabberSDI.h  GrabberTest.cpp  GrabberTest.h  GraphicSystemX11.cpp  GraphicSystemX11.h  HistogramScreen.cpp  HistogramScreen.h  HomographyAnalyzerCPU.cpp  HomographyAnalyzerCPU.h  HomographyAnalyzerGPU.cpp  HomographyAnalyzerGPU.h  ImageGL.cpp  ImageGL.h  ImageProcessing.cpp  ImageProcessing.h  LMOptimize.h  (+55 more)
tests/debug-cuda/: Makefile.am  main.cpp
tests/server/: servertest.py
